fix(mermaid): deterministic layout across JVM runs — Map.copyOf salt
Map.copyOf produces JDK ImmutableCollections.MapN, which salts its hash
table with System.nanoTime() per JVM — iteration order differs on every
run. getNodes() order feeds both computeNodeMinSizes and the ELK
layered layout's node creation order; ELK's crossing minimization keeps
input order among equal solutions, so flowchart node placement drifted
run-to-run (and any change to class-init/allocation order, e.g. an
empty method call on the font init path, deterministically flipped some
layouts — the P5-B anomaly).

FlowchartDocument now wraps a LinkedHashMap (parse insertion order)
with Collections.unmodifiableMap — same immutability, deterministic
iteration. Diagnosis table: 6 other collections (IdentityHashMap
caches, Integer-keyed HashMaps, List.copyOf) verified harmless
(lookup-only or order-stable).

Evidence: 25 pages rendered twice in independent JVM runs — 24/25
pixel-identical including ALL mermaid pages, tasks, content-tabs (the
exemption list shrinks to nei_recipes only: its residual 1344px lives
in the external GTNH sprite-atlas registration order, unreachable from
this project); ratchet 38/38; geometric 0; text pages zero diff vs
pre-fix baseline (mermaid pages allowed one-time baseline migration).